# Graph-homomorphisms

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  setup.sh
.github/workflows/: docker-image.yml
assets/: k_1.txt  k_2.txt  k_3.txt  k_4.txt  k_5.txt  k_6.txt  k_7.txt  k_8.txt  k_9.txt
include/: BitArray.h  BruteForceAlgo.h  CFIGraph.h  CFINode.h  CalcHoms.h  Colored_Node.h  Coloured_Graph.h  EvenSubsetIterator.h  Graph.h  GraphTemplate.h  HomomorphismRange.h  InjectiveHomomorphismRange.h  Injective_Hom_Count_By_Spasm.h  Nauty_wrapper.h  NextInjection.h  Node.h  RandomGraphGenerator.h  Spasm.h  Spasm_k_Matching.h  Standard_Graph.h  linear_Equations_F2_small.h  utilities.h
src/: Main.cpp
src/main/: BitArray.cpp  BruteForceAlgo.cpp  CFIGraph.cpp  CFINode.cpp  CalcHoms.cpp  Colored_Node.cpp  Coloured_Graph.cpp  EvenSubsetIterator.cpp  Graph.cpp  GraphTemplate.cpp  HomomorphismRange.cpp  InjectiveHomomorphismRange.cpp  Injective_Hom_Count_By_Spasm.cpp  NextInjection.cpp  Node.cpp  RandomGraphGenerator.cpp  Spasm.cpp  Spasm_k_Matching.cpp  Standard_Graph.cpp  utilities.cpp
tests/: CFI_tests.cpp  CalcHoms_Christoph_tests.cpp  CalcHoms_tests.cpp  Closed_Formula_Trying.cpp  EvenSubsetIterator_tests.cpp  Experiments_for_Ming.cpp  Graph_Standard_tests.cpp  Graph_tests.cpp  HomomorphismRange_tests.cpp  InjectiveHomomorphismRange_tests.cpp  NextInjection_tests.cpp  RandomGraphGenerator_tests.cpp  Spasm_tests.cpp  SpeedComparisons.cpp  Utilities_tests.cpp  k_9_generation.cpp  linear_Equations_F2_small_tests.cpp
